// syntax="proto3";

// package hello;
// option go_package="/notify_pb";

// message HelloRequest {
//     string name = 1;

// }

// message HelloResponse {
//     string greeting = 1;
// }

// service HelloService{
//     rpc SayHello(HelloRequest) returns (HelloResponse);
// }


syntax = "proto3";

package hello;

option go_package="/notify_pb";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

